test/orig/01-syntax/inv_exception/inv_exception.expected
File "inv_exception.ml", line 1, characters 42-44:
1 | let () = [%LOG [%DEBUG] "msg" [%EXCEPTION 10]]
                                              ^^
Error: This expression has type int but an expression was expected of type
         exn
